syntax="proto3";

package com.aniss;

option java_multiple_files = true;

message UserEntityRequest {
    float id = 1;
}

message UserEntityResponse {
  float id = 1;
  string name = 2;
}

service UserService {
  rpc getUserById(UserEntityRequest) returns (UserEntityResponse) {};
}